<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".EditActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/design_default_color_primary"
        android:paddingStart="8dp"
        android:paddingEnd="8dp">

        <ImageView
            android:id="@+id/ivBackPage"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/vector_arrow_back" />

        <TextView
            android:id="@+id/tvAdd"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="end|center_vertical"
            android:background="@android:color/white"
            android:gravity="center"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/action_add" />

    </FrameLayout>

    <EditText
        android:id="@+id/edTodo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:hint="@string/input_todo_details"
        android:inputType="text"
        android:padding="16dp"
        android:textSize="16sp" />

    <RadioButton
        android:id="@+id/deleteBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_delete" />

    <TextView
        android:id="@+id/LocationXTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="locationX" />

    <EditText
        android:id="@+id/locationXEV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="TBA" />

    <TextView
        android:id="@+id/locationYTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="locationY" />

    <EditText
        android:id="@+id/locationYEV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="TBA" />

</LinearLayout>